k8s-manifest-files/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apps-service
spec:
  selector:
    app: apps
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
