k8s-manifest-files/apps/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apps
  template:
    metadata:
      labels:
        app: apps
    spec:
      containers:
      - name: the-app-hub
        image: moabukar/the-app-hub22e0324
        ports:
        - containerPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
spec:
  ingressClassName: nginx
  rules:
  - host: apps.cdk-labs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apps-service
            port:
              number: 80
  tls:
  - hosts: 
    - apps.cdk-labs.com
    secretName: apps-cert
