k8s-manifest-files/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
spec:
  ingressClassName: nginx
  rules:
  - host: apps.cdk-labs.com
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: apps-service
            port:
              number: 80
  tls:
  - hosts: 
    - apps.cdk-labs.com
    secretName: apps-cert
